@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.1 2006/06/02 22:11:07 hubertf Exp $
+#	$NetBSD: Makefile,v 1.2 2006/06/08 22:17:07 hubertf Exp $
 
 .include <bsd.own.mk>
 .include "${NETBSDSRCDIR}/distrib/common/Makefile.distrib"
@@ -15,14 +15,14 @@ ${V}DIR!=	cd ${.CURDIR}/../ramdisks/${F} && ${PRINTOBJDIR}
 ${V}=		${${V}DIR}/${F}.fs
 .endfor
 
-MDSETTARGETS=		INSTALL		${RAMDISK_B}	-	\
-			INSTALL_LAPTOP	${RAMDISK_B}	-	\
-			INSTALL_XENU	${RAMDISK_B}	-	\
-			INSTALL_XEN3_U	${RAMDISK_B}	-	\
-			INSTALL_SMALL	${RAMDISK_S}	-	\
-			INSTALL_TINY	${RAMDISK_T}	-	\
-			INSTALL_PS2	${RAMDISK_S}	-	\
-			INSTALL_TINY	${RESCUE_T}	netbsd-RESCUE_TINY
+MDSETTARGETS=		INSTALL			${RAMDISK_B}	-	\
+			INSTALL_LAPTOP		${RAMDISK_B}	-	\
+			INSTALL_XEN2_DOMU	${RAMDISK_B}	-	\
+			INSTALL_XEN3_DOMU	${RAMDISK_B}	-	\
+			INSTALL_SMALL		${RAMDISK_S}	-	\
+			INSTALL_TINY		${RAMDISK_T}	-	\
+			INSTALL_PS2		${RAMDISK_S}	-	\
+			INSTALL_TINY		${RESCUE_T}	netbsd-RESCUE_TINY
 
 MDSET_RELEASEDIR=	binary/kernel
 
